# rkstiff

./: .gitignore  .pylintrc  .readthedocs.yaml  MANIFEST.in  README.md  meta.yaml  pyproject.toml  setup.py  tox.ini
.github/workflows/: build.yml  docs-build.yml  python-publish.yml
conda_build/rkstiff/: meta.yaml
demos/: allen_cahn.ipynb  burgers.ipynb  constant_vs_adaptive.ipynb  kdv.ipynb  ks.ipynb  nls.ipynb  sine_gordon.ipynb
docs/: Makefile  requirements.txt
docs/source/: api.rst  conf.py  index.rst
docs/source/_static/: custom.js
rkstiff/: __init__.py  derivatives.py  etd.py  etd34.py  etd35.py  etd4.py  etd5.py  grids.py  if34.py  if4.py  if45dp.py  models.py  solver.py  solveras.py  solvercs.py  test_derivatives.py  test_solvers.py  transforms.py
rkstiff/util/: __init__.py  loghelper.py  solver_type.py
tests/: test_derivatives.py  test_derivatives_cheb.py  test_derivatives_extra.py  test_derivatives_fft.py  test_derivatives_rfft.py  test_etd.py  test_etd34.py  test_etd35.py  test_etd4.py  test_etd5.py  test_grids.py  test_if34.py  test_if4.py  test_if45dp.py  test_loghelper.py  test_models.py  test_order_convergence.py  test_solver.py  test_solver_type.py  test_solveras.py  test_solvercs.py  test_solvers.py  test_transforms.py  testing_util.py
