[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["rkstiff"]

[project]
name = "rkstiff"
version = '0.3.0'
authors = [{name = "Patrick Whalen", email = "whalenpt@gmail.com"}]
description = "'Runge-Kutta adaptive-step and constant-step solvers for nonlinear PDEs'"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.6"
keywords = ["ETD", "Runge-Kutta", "Nonlinear PDEs"]
classifiers=[
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "numpy >=1.14.0",
    "scipy >=1.3.2"
]

[project.optional-dependencies]
demo = [
    "matplotlib",
    "jupyter"
]
dev = [
    "flake8",
    "mccabe",
    "mypy",
    "pylint",
    "twine"
]

test = [
    "coverage",
    "pytest",
    "tox"
]

[project.urls]
homepage = "https://github.com/whalenpt/rkstiff"
documentation = "https://github.com/whalenpt/rkstiff"
repository = "https://github.com/whalenpt/rkstiff"

[tool.black]
line-length = 127
